Fixing vector spacing for rest of sidebar. Removing old config settings
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@57629 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/FundraiserPortal/Templates/RubyText.css
+++ b/extensions/FundraiserPortal/Templates/RubyText.css
@@ -21,6 +21,7 @@ body.skin-modern div#p-DONATE div.pBody {
 /* Vector Style */
 body.skin-vector div#p-DONATE {
 	padding-top: 0;
+	margin-bottom: 0.6em;
 }
 body.skin-vector div#p-DONATE h5 {
 	display: none;
